all.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: prometheus
  namespace: default
spec:
  serviceName: prometheus
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      serviceAccountName: prometheus
      containers:
      - name: prometheus
        image: prom/prometheus:v2.19.2
        ports:
        - containerPort: 9090
          name: http
        volumeMounts:
        - name: prometheus-volume
          mountPath: /etc/prometheus
            readOnly: true
      volumes:
      - name: prometheus-volume
        persistentVolumeClaim:
          claimName: prometheus-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: default
spec:
  selector:
    app: prometheus
  ports:
  - name: http
    port: 9090
    targetPort: http
